# connect-ng

./: Makefile  dbus-call.sh  go.mod
connectd-go/: connectd.go
connectd-rs/: Cargo.toml  build.rs
connectd-rs/src/: main.rs
internal/connect/: version.go
libsuseconnect/: libsuseconnect.go
