[package]
name = "connectd-rs"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.147"
tokio = { version = "1", features = ["full"] }
zbus = { version = "3", default-features = false, features = ["tokio"] }
